deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
  namespace: reverse-words-stage
spec:
  template:
    spec:
      containers:
      - env:
        - name: RELEASE
          value: Stage Release
        - $patch: replace
        image: quay.io/mavazque/tekton-reversewords:testt
        name: reverse-words
