route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: reverse-words
  namespace: reverse-words-stage
spec:
  host: reversewords.apps.ocp4.localdomain
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: "Service"
    name: reverse-words
    weight: 100
